<resources>
    <string name="app_name">Tap A Meal</string>
    <string name="welcome_to_tap_a_meal">Welcome to Tap-a-Meal!</string>
    <string name="here_s_how_it_works_n1_enter_your_data_below_n2_tap_start_n3_tap_each_block_as_you_eat_the_food">Here\'s how it works:  1. Enter your data below.  2. Tap Start.  3. Tap each block as you eat the food!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="i_weigh_roughly">I weigh roughly...</string>
    <string name="less_than_150_lbs">Less than 150 lbs</string>
    <string name="_150_200_lbs">150 - 200 lbs</string>
    <string name="_201_250_lbs">201 - 250 lbs</string>
    <string name="over_250_lbs">Over 250 lbs</string>
    <string name="start">Start</string>
    <string name="i_m_a">I\'m a:</string>
    <string name="info_button">info button</string>
    <string name="reference_card">Reference Card</string>
    <string name="each_block_is_set_to_the_below_calorie_count_tap_each_block_to_learn_more">Each Block is set to the below calorie count. Tap each block to learn more</string>
    <string name="to_record_the_item_simply_tap_it">To record the item, simply tap it.</string>
    <string name="tap_this_to_go_to_the_home_screen">Tap this to go to the home screen</string>
    <string name="this_beauty_will_bring_you_back_here">This beauty will bring you back here.</string>
    <string name="finished_your_tracking_tap_this_button_to_reset">Finished your tracking? Tap this button to reset.</string>
    <string name="_7g_protein">7g protein</string>
    <string name="_15g_of_carbs">15g of carbs</string>
    <string name="_90_cal_of_dairy">90 cal of dairy</string>
    <string name="tap_for_info">tap for info</string>
    <string name="_5g_of_fat">5g of fat</string>
    <string name="_30_free_calories">30 free calories</string>
    <string name="home_android_string_fingerprint_icon_content_description">home @android:string/fingerprint_icon_content_description</string>
    <string name="info_string_info_button">info @string/info_button</string>
    <string name="reset_button">reset button</string>
    <string name="home_button">home button</string>
    <string name="cwk_logo">cwk logo</string>
    <string name="tap_icon">tap icon</string>
    <string name="plan_1">Plan 1</string>
    <string name="_1200_calories_a_day">1200 Calories A Day</string>
    <string name="protein">Protein</string>
    <string name="starch">Starch</string>
    <string name="dairy">Dairy</string>
    <string name="fruit">Fruit</string>
    <string name="fats">Fats</string>
    <string name="treat">Treat</string>
    <string name="green_veggies">Green Veggies</string>
    <string name="plan_2">Plan 2</string>
    <string name="_1400_calories_a_day">1400 Calories A Day</string>
    <string name="plan_3">Plan 3</string>
    <string name="_1600_calories_a_day">1600 Calories A Day</string>
    <string name="plan_4">Plan 4</string>
    <string name="_1800_calories_a_day">1800 Calories A Day</string>
    <string name="plan_5">Plan 5</string>
    <string name="_2000_calories_a_day">2000 Calories A Day</string>
    <string name="p1">1c skim or 1% milk 8oz plain, non-fat yogurt. Cream cheese, all varieties, are counted as fats, not protein or dairy.</string>
    <string name="dairyp2">Calories: 90 Carbs: 12 Protein: 8 grams Fat: trace (1 dairy block)</string>
    <string name="dairyp3">1 ounce full fat cheese (one Dairy PLUS 2 Fat windows)</string>
    <string name="source">*source</string>
    <string name="dairyp4">These can be either a Protein Exchange or a Dairy exchange 1oz of cheese, 2tbsp grated Parmesan, 1/4c fat free ricotta or cottage cheese</string>
    <string name="fatp1">1 teaspoon butter or margarine 10 almonds 20 peanuts 1 teaspoon mayonnaise 10 small or 5 large olives 2 tablespoons low calorie salad dresing 1 tablespoon reduced calorie mayonnaise 2 teaspoons tahini 1 strip bacon 2 strips turkey bacon 3 tablespoons coconut milk 1 tablespoon cream cheese 2 tablespoons reduced fat (Neufatchel) cream cheese 2 tablespoons sour cream</string>
    <string name="fatp2">Calories: 45 Carbs.: 0 grams Protein: 0 grams Fat: 5 grams (1 fat window)</string>
    <string name="fruitp1">Usual serving size: 1 small fruit (apple, plum, pear, etc.) 2
        tablespoons dried fruit (raisins) 4 ounces unsweetened fruit juice 1/2 cup pureed or chopped fruit (applesauce)</string>
    <string name="fruitp2">Calories: 60 Carbs.: 15 grams Protein: 0 grams Fat: 0 grams (1 fruit window)</string>
    <string name="prop1">One serving of Protein is one ounce of meat or fish, 2 ounces of most shellfish. A usual serving is 3 to 4 ounces, so be sure to close that many windows. Don\'t cheat yourself - the weight is after cooking, not before.</string>
    <string name="prop2">Medium Protein Calories: 75 Carbs.: 0 grams Protein: 7 grams Fat: 5 grams (1 protein block)</string>
    <string name="prop4">High-Fat Protein Calories: 100 Carbs.: 0 grams Protein: 7 grams Fat: 8 grams (1 protein + 1 fat block)</string>
    <string name="prop5">Very High-Fat Protein Calories: 136 Carbs.: 0 grams Protein: 7 grams Fat: 12 grams (1 protein + 2 fat block)</string>
    <string name="sp1">1 slice of bread 2 slices low calorie/diet bread 2 breadsticks 1/2 of a 6 inch pita 6 corn tortilla or 7 flour tortilla 3 tablespoons dried breadcrumbs 1/2 cup pasta 1/3 cup rice (white or brown) 1/2 cup of hot cereal 1/2 hot dog or burger roll 1/4 cup baked beans 1/2 cup beans and peas (kidney, garbanzo) 1/3 cup refried beans 1/4 cup hummus</string>
    <string name="sp3">Calories: 80 Carbs.: 15 grams Protein: 3 grams Fat: trace (1 starch block)</string>
    <string name="sp2">Calories: 120 Carbs.: 15 grams Protein: 3 grams Fat: 5 grams (1 starch + 1 fat block)</string>
    <string name="sp4">Calories: 144 Carbs.: 15 grams Protein: 3 grams Fat: 8 grams (1 starch + 2 fat blocks)</string>
    <string name="t1">Extras are used for some very low calorie snacks, or to account for a few extra calories when your foods don\'t quite add up to one full window in any particular category.</string>
    <string name="t2">Calories: 30 or less Carbs.: varies Protein: varies Fat: varies (1 treat block)</string>
    <string name="v1">Calories: 25 Carbs.: 5 grams Protein: 2 grams Fat: 0 grams (1 vegetable block)</string>
    <string name="v2">High starch plant products, such as beans, are listed as Starches, not Vegetables</string>
    <string name="v3">Vegetables are also listed under Bonus Most vegetable exchanges: raw = 1 cup cooked = 1/2 cup juice - 1/2 cup</string>
</resources>
